syntax = "proto3";

package protobuf;

option java_multiple_files = true;
option java_package = "com.herdius.proto";
option java_outer_classname = "HerdiusProto";

message Account {
    string address              = 1;
    string public_key           = 2;
    uint64 nonce                = 3;
    uint64 balance              = 4;
    string storage_root         = 5;
    map<string,EBalance> eBalances = 7;
}

message AccountRegisterRequest{
    string public_key           = 1;
}

message EBalance{
    string address = 1;
    uint64 balance = 2;
    uint64 last_block_height = 3;
    uint64 nonce = 4;
  }

